IaaS2PaaSWeb/Environments/nestedtemplates/vNet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vNetName": {
      "type": "string",
      "minLength": 1
    },
    "NSGName": {
      "type": "string",
      "defaultValue":  "workshopNSG"
    },
    "IPRange": {
      "type": "string",
      "defaultValue": "*"
    }
  },
  "variables": {
    "vNetPrefix": "172.16.10.0/24",
    "vNetSubnet1Name": "Subnet-1",
    "vNetSubnet1Prefix": "172.16.10.0/25"
  },
  "resources": [
    {

      "apiVersion": "2015-05-01-preview",

      "type": "Microsoft.Network/networkSecurityGroups",

      "name": "[parameters('NSGName')]",

      "location": "[resourceGroup().location]",

      "properties": {

        "securityRules": [

          {

            "name": "Allow_RDP",

            "properties": {

              "description": "Allow RDP",

              "protocol": "Tcp",

              "sourcePortRange": "*",

              "destinationPortRange": "3389",

              "sourceAddressPrefix": "[parameters('IPRange')]",

              "destinationAddressPrefix": "*",

              "access": "Allow",

              "priority": 101,

              "direction": "Inbound"

            }

          },

          {

            "name": "Allow_SQL",

            "properties": {

              "description": "Allow SQL",

              "protocol": "Tcp",

              "sourcePortRange": "*",

              "destinationPortRange": "1433",

              "sourceAddressPrefix": "[parameters('IPRange')]",

              "destinationAddressPrefix": "*",

              "access": "Allow",

              "priority": 102,

              "direction": "Inbound"

            }

          },

          {

            "name": "Allow_HTTP",

            "properties": {

              "description": "Allow HTTP",

              "protocol": "Tcp",

              "sourcePortRange": "*",

              "destinationPortRange": "80",

              "sourceAddressPrefix": "*",

              "destinationAddressPrefix": "*",

              "access": "Allow",

              "priority": 100,

              "direction": "Inbound"

            }

          },
          
          {

            "name": "Allow_HTTPS",

            "properties": {

              "description": "Allow HTTP",

              "protocol": "Tcp",

              "sourcePortRange": "*",

              "destinationPortRange": "443",

              "sourceAddressPrefix": "*",

              "destinationAddressPrefix": "*",

              "access": "Allow",

              "priority": 104,

              "direction": "Inbound"

            }

          }

        ]

      }

    },
    {
      "name": "[parameters('vNetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGName'))]"
       ],
      "tags": {
        "displayName": "vNet"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vNetSubnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('vNetSubnet1Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-05-10",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('vNetName'))]"
       ],
      "name": "nestedTemplate",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": [
              {
                  "apiVersion": "2018-03-01",
                  "type": "Microsoft.Network/virtualNetworks/subnets",          
                  "name": "[concat(parameters('vNetName'), '/', variables('vNetSubnet1Name'))]",         
                  "location": "[resourceGroup().location]",          
                  "properties": {         
                    "addressPrefix": "[variables('vNetSubnet1Prefix')]",         
                    "networkSecurityGroup": {         
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGName'))]"         
                    }         
                  }         
              }
          ]
        }
      }
    }
  ],
  "outputs": {
  }
}
